[package]
name = "csl-legacy"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
repository.workspace = true

[dependencies]
tracing.workspace = true
indexmap = "2.13.0"
roxmltree = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lints]
workspace = true
